# mavericks-docker

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VERSION
.github/: renovate.json
.github/workflows/: boot2docker.yml  release.yml
cmake/: build_boot2docker.sh  build_docker_cli.sh  build_docker_compose.sh  build_docker_machine.sh  build_lazydocker.sh  characterize_build.sh  clone_pinned.sh  common.sh  demo_osinit_guard.sh  fetch_10_9_sdk.sh  iso_boot_proof.sh  iso_fetch_verify.sh  iso_fingerprint.sh  package_pkg.sh  sdk_coverage.sh  weak_allowlist.txt
cmake/characterization/boot2docker/: engine  kernel
cmake/characterization/docker-cli/: gomod
cmake/resources/: Welcome.html
components/boot2docker/: golden.sha256  version
components/boot2docker/patches/: 0001-kernel-key-fetch-over-https.patch
components/docker-cli/: version
components/docker-compose/: version
components/docker-machine/: version
components/lazydocker/: version
docs/release-notes/: 20260719-mavericks.1.md
menubar/: AppDelegate.m  CMakeLists.txt  Info.plist.in  MDController.m  MDLoginItem.h  MDLoginItem.m  MDWatchers.m  main.m
payload/: README.txt  dev.modernmavericks.container-tools-machine.plist  docked  docker-machine-bootstrap  docker-machine-common.sh  docker-machine-ctl  docker-machine-ensure-default
release-notes/: 20260719-mavericks.1.md
tests/: boot2docker_build_script_test.sh  boot2docker_ci_test.sh  boot2docker_pin_test.sh  characterize_test.sh  compat_guard_test.sh  docker_bootstrap_test.sh  docker_cli_test.sh  docker_common_test.sh  docker_compose_test.sh  docker_ctl_test.sh  docker_menubar_test.sh  fetch_sdk_test.sh  iso_boot_proof_test.sh  iso_fetch_verify_test.sh  iso_fingerprint_test.sh  renovate_test.sh  scaffold_test.sh  sdk_coverage_test.sh
updater/: CMakeLists.txt  ICON-CREDIT.txt  container-tools-updater.icns  mavericks-docker-updater.icns
updater/updater/: ed25519_key.pub
